Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17229

Encryption threads ignore innodb_default_encryption_key_id

    XMLWordPrintable

Details

    Description

      When tablespace is to be encrypted by encryption threads (encryption unencrypted => encrypted) the tablespace will be always encrypted with key id 0. Encryption threads ignore the value of innodb_default_encryption_key_id. innodb_default_encryption_key_id should be used when encrypting unencrypted=>encrypted with encryption thread.

      Attachments

        Activity

          People

            thiru Thirunarayanan Balathandayuthapani
            robgolebiowski Robert Golebiowski
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.